--- a/src/app/pages/user/load-quiz/load-quiz.component.html
+++ b/src/app/pages/user/load-quiz/load-quiz.component.html
@@ -1,4 +1,6 @@
-<!-- {{availablequizzes | json}} -->
+<!-- {{availablequizzes | json}}
+
+{{reports| json}} -->
 
 <mat-card class="quiz-summary-card">
   <!-- Loading indicator for initial report data -->
@@ -184,10 +186,10 @@
                 <mat-form-field appearance="outline" class="full-width">
                   <mat-label>Choose a course</mat-label>
                   <mat-select name="category" [(ngModel)]="categories.cid" (selectionChange)="onQuizOptionSelected()">
-                    <mat-option *ngFor="let c of reports" [value]="c.quiz.category.cid">
+                    <mat-option *ngFor="let c of uniqueCategories" [value]="c.cid">
                       <div class="course-option">
-                        <span class="course-code">{{c.quiz.category.courseCode}}</span>
-                        <span class="course-title">{{c.quiz.category.title}}</span>
+                        <!-- <span class="course-code">{{c.quiz.category.courseCode}}-> </span> -->
+                        <span class="course-title"> {{ c.courseCode }} : {{ c.title }}</span>
                       </div>
                     </mat-option>
                   </mat-select>
@@ -422,7 +424,7 @@
       <table class="summary-table mat-elevation-z1">
         <thead>
           <tr>
-            <th>Section</th>
+            <th>Quiz Title</th>
             <th *ngIf="showObjectiveColumn()">Objective</th>
             <th *ngIf="showTheoryColumn()">Theory</th>
             <th>Status</th>
@@ -431,7 +433,7 @@
         <tbody>
           <tr *ngFor="let r of reportData; let i = index">
             <!-- {{reportData | json}} -->
-            <td>Section {{i + 1}}</td>
+            <td>{{r.quiz.title}}</td>
             <td *ngIf="showObjectiveColumn()">{{r.marks}}/{{r.quiz.maxMarks}}</td>
             <td *ngIf="showTheoryColumn()">{{r.marksB}}/100</td>
             <td>
