Saving Print editting front pages showig if OBJ, BOTH or THEORY

--- a/src/app/pages/admin/welcome/welcome.component.html
+++ b/src/app/pages/admin/welcome/welcome.component.html
@@ -272,7 +272,7 @@
 
   <!-- OBJ Marks -->
   <ng-container matColumnDef="marks" *ngIf="quizType !== 'THEORY'">
-    <th mat-header-cell *matHeaderCellDef> OBJ Marks </th>
+    <th mat-header-cell *matHeaderCellDef> Section A </th>
     <td mat-cell *matCellDef="let element"> {{ element.marks }} </td>
   </ng-container>
 
