--- a/src/app/pages/admin/view-categories/view-categories.component.html
+++ b/src/app/pages/admin/view-categories/view-categories.component.html
@@ -5,7 +5,7 @@
       <mat-icon class="header-icon">school</mat-icon>
       <h1 class="card-title">All Courses</h1>
       <span class="flex-spacer"></span>
-      <button mat-raised-button color="primary" routerLink="/admin/add-category" class="add-course-btn">
+      <button mat-raised-button color="primary" routerLink="/admin/add-course" class="add-course-btn">
         <mat-icon>add</mat-icon>
         Add New Course
       </button>
