--- a/src/app/pages/admin/view-quizzes/view-quizzes.component.html
+++ b/src/app/pages/admin/view-quizzes/view-quizzes.component.html
@@ -214,9 +214,29 @@
                 [type]="hide ? 'text' : 'password'">
               <button mat-icon-button matSuffix type="button" (click)="hide = !hide">
                 <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
-              </button> <mat-hint>Optional password protection</mat-hint>
+              </button> <mat-hint style="color:blueviolet"> Password Protection</mat-hint>
             </mat-form-field>
           </div>
+
+          <!-- Quiz Time and Date -->
+          <div class="form-row">
+            <mat-form-field appearance="outline" class="form-field">
+              <mat-label>Quiz Date</mat-label>
+              <input matInput [matDatepicker]="picker" [(ngModel)]="quizById.quizDate" name="quizDate">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+              <!-- <mat-icon matSuffix>event</mat-icon> -->
+            </mat-form-field>
+
+            <mat-form-field appearance="outline" class="form-field">
+              <mat-label>Start Time</mat-label>
+              <input matInput type="time" [(ngModel)]="quizById.startTime" name="startTime">
+              <mat-icon matSuffix>access_time</mat-icon>
+            </mat-form-field>
+          </div>
+
+
+
         </div>
         <mat-slide-toggle [(ngModel)]="quizById.active" name="active" color="primary" class="publish-toggle">
           <mat-icon>{{quizById.active ? 'visibility' : 'visibility_off'}}</mat-icon>
@@ -224,6 +244,15 @@
         </mat-slide-toggle>
       </form>
     </div>
+
+
+
+
+
+
+
+
+
     <mat-divider></mat-divider>
     <div mat-dialog-actions class="dialog-actions">
       <button mat-stroked-button (click)="dialogRef.close()">
